[gd_scene load_steps=24 format=3 uid="uid://dtgeox4h0gad6"]

[ext_resource type="Script" path="res://scripts/entities/npcs/reaper/reaper.gd" id="1_0ogy4"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/timers_component.gd" id="1_srlfx"]
[ext_resource type="Resource" uid="uid://cod71s68qtc1d" path="res://resources/entities/npcs/npc_stats.tres" id="2_05t3f"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/entity_anim_component.gd" id="2_d23ni"]
[ext_resource type="Texture2D" uid="uid://mwsry1ynqj1l" path="res://assets/entities/npcs/reaper/PassiveIdleReaper-Sheet.png" id="2_sjwvx"]
[ext_resource type="Script" path="res://scripts/fsm/finite_state_machine.gd" id="3_yq5fs"]
[ext_resource type="Texture2D" uid="uid://c1k5c4ml1uug7" path="res://assets/entities/npcs/reaper/HolsterWeaponReaper-Sheet.png" id="5_tudpw"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/entity_movement_component.gd" id="5_v8k5f"]
[ext_resource type="Texture2D" uid="uid://we7fxsfduwt1" path="res://assets/entities/npcs/reaper/WieldWeaponReaper-Sheet.png" id="6_7xbyi"]
[ext_resource type="Script" path="res://scripts/entities/npcs/reaper/states/WeaponWieldHolster.gd" id="7_fst5j"]
[ext_resource type="Script" path="res://scripts/entities/shared/states/entity_idle.gd" id="7_udx7g"]
[ext_resource type="Script" path="res://scripts/entities/npcs/shared/components/npc_interaction_component.gd" id="8_gdpxl"]
[ext_resource type="Script" path="res://scripts/entities/shared/states/entity_walk.gd" id="10_8hs36"]
[ext_resource type="Script" path="res://scripts/entities/shared/states/entity_death.gd" id="11_4faf6"]
[ext_resource type="PackedScene" uid="uid://dtysoabuc2buy" path="res://scenes/ui/healthbar.tscn" id="14_aiuf0"]
[ext_resource type="Script" path="res://scripts/misc/hitflash/HitFlashAnimationPlayer.gd" id="15_t3st2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2daef"]
radius = 6.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nv3ue"]
radius = 20.0

[sub_resource type="Animation" id="Animation_qvdtd"]
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_sjwvx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_vgwfx"]
resource_name = "side_holster_weapon"
length = 1.5
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_tudpw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0)]
}

[sub_resource type="Animation" id="Animation_emjl3"]
resource_name = "side_passive_idle"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_sjwvx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 4]
}

[sub_resource type="Animation" id="Animation_rvm3k"]
resource_name = "side_wield_weapon"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_7xbyi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvy82"]
_data = {
"RESET": SubResource("Animation_qvdtd"),
"side_holster_weapon": SubResource("Animation_vgwfx"),
"side_passive_idle": SubResource("Animation_emjl3"),
"side_wield_weapon": SubResource("Animation_rvm3k")
}

[node name="reaper" type="CharacterBody2D" node_paths=PackedStringArray("wield_holster_weapon_state", "interaction_comp", "fsm", "sprite", "healthbar", "anim_player", "hitflash_anim_player", "move_comp", "anim_comp", "timer_comp", "idle_state", "walk_state", "death_state")]
script = ExtResource("1_0ogy4")
wield_holster_weapon_state = NodePath("FSM/ReaperWeaponWieldHolsterState")
interaction_comp = NodePath("NPCInteractionComponent")
stats = ExtResource("2_05t3f")
fsm = NodePath("FSM")
sprite = NodePath("Sprite2D")
healthbar = NodePath("Healthbar")
anim_player = NodePath("AnimationPlayer")
hitflash_anim_player = NodePath("HitFlashAnimPlayer")
move_comp = NodePath("EntityMovementComponent")
anim_comp = NodePath("EntityAnimationComponent")
timer_comp = NodePath("TimersComponent")
idle_state = NodePath("FSM/EntityIdleState")
walk_state = NodePath("FSM/EntityWalkState")
death_state = NodePath("FSM/EntityDeathState")

[node name="TimersComponent" type="Node" parent="."]
script = ExtResource("1_srlfx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_sjwvx")
flip_h = true
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_2daef")

[node name="Healthbar" parent="." instance=ExtResource("14_aiuf0")]
offset_left = -7.0
offset_top = 1.0
offset_right = 8.0

[node name="EntityAnimationComponent" type="Node" parent="."]
script = ExtResource("2_d23ni")

[node name="EntityMovementComponent" type="Node" parent="."]
script = ExtResource("5_v8k5f")

[node name="NPCInteractionComponent" type="Area2D" parent="."]
script = ExtResource("8_gdpxl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPCInteractionComponent"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_nv3ue")

[node name="FSM" type="Node2D" parent="."]
script = ExtResource("3_yq5fs")

[node name="ReaperWeaponWieldHolsterState" type="Node2D" parent="FSM"]
script = ExtResource("7_fst5j")

[node name="EntityIdleState" type="Node2D" parent="FSM"]
script = ExtResource("7_udx7g")
idle_anim = "passive_idle"

[node name="EntityWalkState" type="Node2D" parent="FSM"]
script = ExtResource("10_8hs36")

[node name="EntityDeathState" type="Node2D" parent="FSM"]
script = ExtResource("11_4faf6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lvy82")
}

[node name="HitFlashAnimPlayer" type="AnimationPlayer" parent="."]
script = ExtResource("15_t3st2")
